CRUD, Paginação e Filtro para Categoria

--- a/gerencia/templates/gerencia/listagem_noticia.html
+++ b/gerencia/templates/gerencia/listagem_noticia.html
@@ -15,7 +15,7 @@
             <form method="get">
                 <div class="form-group mb-3">
                     <!-- Campo de Título ocupando a linha completa -->
-                    <label for="titulo">Título</label>
+                    <label for="titulo">Titulo</label>
                     {{ formularioFiltro.titulo }}
                 </div>
                 <div class="form-row">
